package com.rustudor.Dto;

public class StringObj {
    String myString;

    public String getMyString() {
        return myString;
    }

    public void setMyString(String myString) {
        this.myString = myString;
    }
}
