package com.rustudor.business.factory;

public abstract class AbstractFactory {
    public abstract Report getReport(String reportType);
}
