package com.rustudor.entity;

public enum Role {
    USER,ADMIN
}
